deploy/TimeBilling.Monolith/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timebillingmonolith
  labels:
    app: timebillingmonolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timebillingmonolith
  template:
    metadata:
      labels:
        app: timebillingmonolith
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      volumes:
        - name: timebillingmonolith-storage
          persistentVolumeClaim:
            claimName: timebillingmonolith-claim
      containers:
      - name: timebillingmonolith
        image: registry:5000/timebillingmonolith:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: http
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 30
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: http
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 30
        resources:
          requests:
            memory: "32Mi"
            cpu: "16m"
          limits:
            memory: "128Mi"
            cpu: "512m"
        volumeMounts:
          - mountPath: "/data"
            name: timebillingmonolith-storage
---
