deploy/TimeBilling.Monolith/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timebillingmonolith
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "timebillingmonolith.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: timebillingmonolith
            port:
              number: 80
  - host: "timebillingmonolith"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: timebillingmonolith
            port:
              number: 80
